# soft-anal-dev-productivity

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
scripts/: 0_explore_db.py  1_aggregate.py  2_clean_data.py  2_clean_data_100_dev.py  3_analysis.py  3_analysis_100_dev.py  3_analysis_bins.py  3_analysis_new.py  aimining.py  utils.py
