[project]
name = "soft-anal-dev-productivity"
version = "0.1.0"
description = "Data processing for Software Analytics project about the effect using AI on developer productivity"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]
